@@ -160,6 +160,22 @@ uint8_t lpc17_ssp1status(FAR struct spi_dev_s *dev, enum spi_dev_e devid)
   sspdbg("Returning SPI_STATUS_PRESENT\n");
   return SPI_STATUS_PRESENT;
 }
+
+/******************************************************************************
+ * Name:  lpc17_ssp1cmddata
+ *
+ * Description: Dummy Function
+ *
+ ******************************************************************************/
+
+#ifdef CONFIG_SPI_CMDDATA
+int weak_function lpc17_ssp1cmddata(FAR struct spi_dev_s *dev,
+                                    enum spi_dev_e devid, bool cmd)
+{
+  return OK;
+}
+
+#endif /* CONFIG_SPI_CMDDATA */
 #endif /* CONFIG_LPC17_SSP1 */
 
 #ifdef CONFIG_LPC17_SSP0
